# web-scrapping-voos

./: CNAME  app.py  azul.html  flight_checker.py  flights_results.csv  gol.html  google_voos.html  google_voos_modificado.html  index.html  latam.html  main.py  pyproject.toml  requirements.txt  resultados.csv  test.py  teste.py
.github/workflows/: flights.yml
