[project]
name = "web-scrapping-voos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "selenium>=4.35.0",
    "supabase>=2.18.1",
    "webdriver-manager>=4.0.2",
]
